--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "presentation-react",
+  "name": "pantunesia-presentation",
   "private": true,
   "version": "0.0.0",
   "type": "module",
